k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy
  labels:
    app: deploy  
spec:
  type: ClusterIP
  ports:
    - port: 80          
      targetPort: 8080        
  selector:
    app: deploy
